--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
